--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 API_BASE_URL="https://api.mercadolibre.com/"
 API_SEARCH_LIMIT="4"
+SUGGESTIONS_API_BASE_URL="https://http2.mlstatic.com/"
+SUGGESTIONS_API_LIMIT="6"
 NAME="Jorge"
 LASTNAME="Arraga"
