--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ SUGGESTIONS_API_BASE_URL="https://http2.mlstatic.com/"
 SUGGESTIONS_API_LIMIT="6"
 NAME="Jorge"
 LASTNAME="Arraga"
+BFF_API_BASE_URL="https://jarraga-meli-challenge.vercel.app/api/"
